<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dataengine</groupId>
    <artifactId>data-engine-platform</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Data-Engine Platform</name>
    <description>一站式数据工作平台，面向模型微调与RAG检索</description>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring-boot.version>3.2.2</spring-boot.version>
        <spring-cloud.version>2023.0.0</spring-cloud.version>
        <mysql.version>8.0.33</mysql.version>
        <postgresql.version>42.6.0</postgresql.version>
        <redis.version>3.2.0</redis.version>
        <elasticsearch.version>8.11.0</elasticsearch.version>
        <junit.version>5.10.0</junit.version>
        <springdoc.version>2.2.0</springdoc.version>
        <jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
        <jakarta-validation.version>3.0.2</jakarta-validation.version>
        <jakarta.persistence.version>3.1.0</jakarta.persistence.version>
        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
        <mybatis-plus.version>3.5.5</mybatis-plus.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <lombok.version>1.18.32</lombok.version>
    </properties>

    <modules>
        <!-- 共享库 -->
        <module>shared/domain-common</module>
        <module>shared/security-common</module>

        <!-- 核心服务 -->
        <module>services/data-management-service</module>
        <module>services/data-collection-service</module>
        <module>services/operator-market-service</module>
        <module>services/data-cleaning-service</module>
        <module>services/data-synthesis-service</module>
        <module>services/data-annotation-service</module>
        <module>services/data-evaluation-service</module>
        <module>services/pipeline-orchestration-service</module>
        <module>services/execution-engine-service</module>

        <!-- RAG服务 -->
        <module>services/rag-indexer-service</module>
        <module>services/rag-query-service</module>

        <!-- 主启动模块 -->
        <module>services/main-application</module>

        <!-- API Gateway微服务 -->
        <module>api-gateway</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- OpenAPI相关依赖版本管理 -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openapitools</groupId>
                <artifactId>jackson-databind-nullable</artifactId>
                <version>${jackson-databind-nullable.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>${jakarta-validation.version}</version>
            </dependency>

            <dependency>
              <groupId>jakarta.persistence</groupId>
              <artifactId>jakarta.persistence-api</artifactId>
              <version>${jakarta.persistence.version}</version>
            </dependency>

            <dependency>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-starter-data-jpa</artifactId>
              <version>${spring-boot.version}</version>
            </dependency>
            <!-- MyBatis version alignment -->
            <dependency>
              <groupId>com.baomidou</groupId>
              <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
              <version>${mybatis-plus.version}</version>
            </dependency>

            <dependency>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct</artifactId>
              <version>${mapstruct.version}</version>
            </dependency>

            <dependency>
              <groupId>mysql</groupId>
              <artifactId>mysql-connector-java</artifactId>
              <version>${mysql.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-web</artifactId>
          <version>${spring-boot.version}</version>
        </dependency>

        <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter</artifactId>
          <version>${spring-boot.version}</version>
        </dependency>

        <dependency>
          <groupId>com.baomidou</groupId>
          <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
          <version>${mybatis-plus.version}</version>
        </dependency>

        <dependency>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok</artifactId>
          <version>${lombok.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
            </plugin>
        </plugins>
    </build>
</project>
